@@ -13,6 +13,7 @@
 	on_button_new_product_clicked.
 	(CloseAddWindow): Deleted function.
 	(AddNew): Deleted function, replaced by on_btn_add_new_product_clicked.
+	(ToggleSelect): Deleted function.
 
 	* utils.c (clean_container): Adde g_free and g_list_free to the
 	widget_name and list.
